--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "component-library-css",
+  "name": "@nousantx/getui-web",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,15 +17,20 @@
     "@eslint/js": "^9.17.0",
     "@generouted/react-router": "^1.19.9",
     "@nousantx/tenoxui-styler": "^0.1.22",
+    "@remixicon/react": "^4.6.0",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "dompurify": "^3.2.3",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "iconoir-react": "^7.10.1",
     "react-router-dom": "^7.1.1",
+    "shiki": "^1.24.4",
     "tenoxui-plugin-utility": "^0.1.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
