--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "globals": "^15.14.0",
     "iconoir-react": "^7.10.1",
     "react-router-dom": "^7.1.1",
+    "responsive-alt-tui": "^0.1.0",
     "shiki": "^1.24.4",
     "tenoxui-plugin-utility": "^0.1.2",
     "typescript": "~5.6.2",
