--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "@nousantx/getui-web",
+  "name": "@nousantx/anyframe-ui",
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "license": "MIT",
+  "author":"NOuSantx <nousantx@gmail.com>",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -17,7 +19,6 @@
     "@eslint/js": "^9.17.0",
     "@generouted/react-router": "^1.19.9",
     "@nousantx/tenoxui-styler": "^0.1.22",
-    "@remixicon/react": "^4.6.0",
     "@types/dompurify": "^3.2.0",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
@@ -28,9 +29,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "iconoir-react": "^7.10.1",
     "react-router-dom": "^7.1.1",
-    "responsive-alt-tui": "^0.1.0",
     "shiki": "^1.24.4",
     "tenoxui-plugin-utility": "^0.1.2",
     "typescript": "~5.6.2",
