feat: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nousantx/anyframe-ui",
+  "name": "@anyframe/web",
   "description": "Generate component, copy, and paste it!",
   "version": "1.0.0",
   "author": "NOuSantx <nousantx@gmail.com>",
