--- a/firebase.json
+++ b/firebase.json
@@ -2,11 +2,7 @@
   "hosting": {
     "public": "dist",
     "site": "anyframe",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
